# RayTracingRust

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.md  test
assets/: house.mtl
benches/: bench.rs  bvh_tree_stress.rs  mesh.rs  quad_tree_construction.rs  simple_render_bench.rs
lib/: backgrounds.rs  camera.rs  color.rs  gui.rs  lib.rs  material.rs  materials.rs  notes.md  objects.rs  ray.rs  render.rs  scene.rs  sky.rs  utils.rs  volume.rs
lib/core/: bvh.rs  camera.rs  mesh.rs  mod.rs  render.rs  scene.rs  traits.rs
lib/gui/: gui.rs
lib/math/: mod.rs  sample.rs
lib/utils/: aabb.rs  color.rs  math.rs  mod.rs  ray.rs  sample.rs  shapes.rs  types.rs  vector.rs
scenes/: benchmark.json  simple.json
src/: demo.rs  gui.rs  lib.rs  main.rs  ray.rs  render.rs  scene.rs  utils.rs
