[package]
name = "ray_tracing_rust"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
# lto = "fat"
# codegen-units = 1

[profile.bench]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simple_render_bench"
harness = false

[[bench]]
name = "quad_tree_construction"
harness = false

[[bench]]
name = "bvh_tree_stress"
harness = false

[lib]
name = "ray_tracing_rust"
path = "lib/lib.rs"

[[bin]]
name = "ray_tracing_rust"
path = "src/main.rs"


[dependencies]
egui = "0.17"
egui_wgpu_backend = "0.17"
egui-winit = { version = "0.17", default-features = false, features = ["links"] }
env_logger = "0.9"
log = "0.4"
pixels = "0.9"
winit = "0.26"
winit_input_helper = "0.12"
cgmath = { version = "0.18", features = ["serde"]}
rand = "0.8"
image = "0.24"
exr = "1.4.2"
derive-new = "0.5"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.1"
obj-rs = "0.7"
